# php-src-kos

./: .gitignore  CMakeLists.txt  cross-build.sh
ext/posix/: posix.c
ext/standard/: proc_open.c
kos/examples/fpm/: CMakeLists.txt
kos/examples/fpm/einit/: CMakeLists.txt
kos/examples/fpm/einit/src/: init.yaml.in  security.psl
kos/examples/web_server/: CMakeLists.txt
kos/examples/web_server/einit/: CMakeLists.txt
kos/examples/web_server/einit/src/: init.yaml.in  security.psl
kos/examples/web_server/resources/hdd/usr/local/nginx/conf/: nginx.conf
kos/examples/web_server/resources/hdd/www/: index.php
kos/php/: CMakeLists.txt
main/: php_config.h
sapi/cli/: php_cli.c
sapi/fpm/fpm/: fpm_children.c  fpm_conf.c  fpm_events.c  fpm_log.c  fpm_main.c  fpm_stdio.c  fpm_unix.c
sapi/kos/: CMakeLists.txt
sapi/kos/entity/: CMakeLists.txt
sapi/kos/entity/einit/: CMakeLists.txt
sapi/kos/entity/fpm/: CMakeLists.txt  Fpm.cfg  Fpm.edl
sapi/kos/libraries/: CMakeLists.txt
sapi/kos/libraries/ext/standard/: CMakeLists.txt
sapi/kos/resources/rootdir/: ping.php
